--- a/ManageSemester/Views/Home/About.cshtml
+++ b/ManageSemester/Views/Home/About.cshtml
@@ -1,7 +1,36 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿@model IEnumerable<ManageSemester.ViewModels.EnrollmentByCourseGroup>
 
-<p>Use this area to provide additional information.</p>
+@{
+    ViewBag.Title = "Student & Course Statistics";
+}
+
+<h2>Student & Course Statistics</h2>
+
+<table>
+    <tr>
+        <th>
+            CourseCode
+        </th>
+        <th>
+            CourseTitle
+        </th>
+        <th>
+            Students
+        </th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CourseID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CourseTitle)
+            </td>
+            <td>
+                @item.StudentCount
+            </td>
+        </tr>
+    }
+</table>
