--- a/ManageSemester/Views/Student/Create.cshtml
+++ b/ManageSemester/Views/Student/Create.cshtml
@@ -36,7 +36,7 @@
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.Gender)
-                    @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })Male/Female
                 </div>
             </div>
         </div>
