--- a/ManageSemester/Views/Student/Delete.cshtml
+++ b/ManageSemester/Views/Student/Delete.cshtml
@@ -44,8 +44,13 @@
         </dd>
 
     </dl>
-
-    @using (Html.BeginForm()) {
+    <script type="text/javascript">
+        window.onload = function () {
+            alert("@ViewBag.ErrorMessage");
+        };
+    </script>
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
@@ -53,4 +58,6 @@
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
+
 </div>
+
