Enrollment + Approve Course + Delete Course

--- a/ManageSemester/Views/Shared/_Layout.cshtml
+++ b/ManageSemester/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Student Statistics", "About", "Home")</li>
                     <li>@Html.ActionLink("Students", "Index", "Student")</li>
                     <li>@Html.ActionLink("Courses", "Index", "Course")</li>
+                    <!--<li>@Html.ActionLink("Enrollment", "Index", "Enrollment")</li>-->
                 </ul>
             </div>
         </div>
