--- a/ManageSemester/Views/Student/Edit.cshtml
+++ b/ManageSemester/Views/Student/Edit.cshtml
@@ -38,6 +38,7 @@
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.Gender)
+                    @(Model.Gender ? "Male" : "Female")
                     @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
                 </div>
             </div>
